--- a/source/css/light.css
+++ b/source/css/light.css
@@ -117,7 +117,7 @@
 
 /* single item (margines set from javascript) */
 .timelineLight .item {
-	height:380px;
+	height:420px;
 	text-align:center;
 	background:url('../images/timeline/light/background-white.jpg') repeat; 
 	color:#545454;
@@ -131,6 +131,7 @@
 .timelineLight .item img {
 	margin-top:0;
 	width:200px;
+	height:150px;
 }
 
 .timelineLight .item span{
@@ -154,7 +155,7 @@
 
 /* item details (margines set from javascript) */
 .timelineLight .item_open {
-	height:380px;
+	height:420px;
 	background:url('../images/timeline/light/background.jpg') repeat;
 	position:relative;
 	color:#545454;
@@ -164,6 +165,11 @@
 	box-shadow: 0px 0px 6px rgba(0,0,0,0.4);
 	width:490px;
 	
+}
+
+.timelineLight .item_open img {
+	width: 100%;
+	height: 100%;
 }
 
 /* item details content wrapper (used for animation - shuld have same width as .item_open) */
